tests/checker/good/namespace2.scilla
scilla_version 0

import ListUtils >> LU

library NS

let foo = LU.list_sort

contract TestContr1
()
