tests/checker/bad/libchaincycle.scilla
scilla_version 0

import TestLibCycle1

library LibChainCycle

let foo = sort_uint32

contract TestContrCycle
()
